# SDG-Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Asteroids/: Asteroid.h  Asteroids.cpp  Asteroids.html  Bullet.cpp  Bullet.h  CMakeLists.txt  Ship.cpp  Ship.h
Asteroids/Scenes/: GameScene.cpp  GameScene.h
Asteroids/assets/: config.lua
Asteroids/assets/atlas/: MainAtlas.lua  MainAtlas.pvr.ccz  MainAtlas.tps  MainAtlas.xml  MainAtlas_sprites.lua  MainAtlas_sprites.xml  texturepacker_test_sprites.lua
Asteroids/assets/images/: MainAtlas.tps
Asteroids/assets/levels/: level1.tmx  level2.tmx
Asteroids/assets/levels/templates/: Zombie.tx
SurvivalGame/: Bullet.h  CMakeLists.txt  GameScene.h  Player.h  SurvivalGame.cpp  SurvivalGame.html  Zombie.h
SurvivalGame/assets/: config.lua
SurvivalGame/assets/atlas/: texturepacker_test.lua  texturepacker_test.tps  texturepacker_test.xml  texturepacker_test_sprites.lua  texturepacker_test_sprites.xml
cmake/: FMOD.cmake  Wwise.cmake
src/Engine/: CollisionMgr.cpp  CollisionMgr.h  Core.h  Entity.cpp  Entity.h  EntityMgr.cpp  EntityMgr.h  EntryPoint.cpp  GL.h  Game.cpp  Game.h  GraphicsLibrary.h  Log.cpp  Log.h  Platform.cpp  Platform.h
src/Engine/Audio/: Audio.cpp  Audio.h
src/Engine/Audio/MixEngine/: MixEngine.cpp  MixEngine.h  SoundID.h
src/Engine/Components/: Body.cpp  Body.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ComponentList.cpp  ComponentList.h  EntityComponent.cpp  EntityComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.h
src/Engine/Content/: AtlasCache.cpp  AtlasCache.h  ContentMgr.cpp  ContentMgr.h  Font.cpp  Font.h  Frame.cpp  Frame.h  Pixel.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteAtlas.cpp  SpriteAtlas.h  Texture2D.h  TextureCache.cpp  TextureCache.h
src/Engine/Content/Tiled/: Layer.h  Object.cpp  Object.h  ObjectLayer.h  Property.cpp  Property.h  Tile.h  TileLayer.h  TileMap.cpp  TileMap.h  TileMapLoader.cpp  TileMapLoader.h  TileSet.h
src/Engine/Events/: Delegate.h  Delegate2.h  EventListener.h
src/Engine/File/: IO.cpp  IO.h  PicoPNG.cpp  PicoPNG.h  SwapEndian.h  ZipUtils.cpp  ZipUtils.h
src/Engine/Graphics/: Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  DefaultShader.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceMgr.cpp  GraphicsDeviceMgr.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  SpriteFont.h  Vertex.h
src/Engine/Graphics/OpenGL/: GraphicsDeviceMgr_GL.cpp  GraphicsDeviceMgr_GL.h  GraphicsDevice_GL.cpp  GraphicsDevice_GL.h  SpriteBatch_GL.cpp  SpriteBatch_GL.h
src/Engine/Graphics/Particles/: Particle.h  ParticleEmitter.cpp  ParticleEmitter.h
src/Engine/Input/: Button.h  InputMgr.cpp  InputMgr.h  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Engine/Math/: Math.h  Rand.cpp  Rand.h  Rectangle.h  Tween.cpp  Tween.h  TweenFunctions.cpp  TweenFunctions.h  Vector2.h  Vector3.h
src/Engine/Scenes/: Scene.cpp  Scene.h  SceneCache.cpp  SceneCache.h  SceneMgr.cpp  SceneMgr.h  SceneRunner.cpp  SceneRunner.h  SceneStore.cpp  SceneStore.h
src/Engine/Scripting/: VM.cpp  VM.h
src/Engine/States/: StateMachine.cpp  StateMachine.h  StateMachineState.h
src/Engine/Templates/: Pool.h
src/Engine/Tests/: Performance.cpp  Performance.h
src/Engine/Time/: Chronogram.cpp  Chronogram.h  GameTime.cpp  GameTime.h  Performance.cpp  Performance.h  Timer.cpp  Timer.h
src/lua/: CMakeLists.txt
